# remake_bot

./: Dockerfile  README.md  compose.yml  countries.json  go.mod  go.sum  handlers.go  logger.go  main.go  user_list.json
.github/workflows/: docker.yml
bot/: handler.go  message_conuter.go  module.go  remake.go  tele.go
command/: handler.go
database/: db.go
quotely/: quotely.go
userbot/: main.py  pyproject.toml
